# kanban

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
app/: layout.tsx  page.tsx
app/api/kanban/: route.ts
app/api/kanban/items/: route.ts
app/login/: page.tsx
apps/api/: .env.example  database.py  main.py  models.py  orm.py  package.json  pyproject.toml  requirements.txt  store.py  validation.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_tables.py
apps/api/scripts/: seed.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: gantt-chart.tsx  kanban-app.tsx  report-sheet.tsx
apps/web/lib/: api.ts  auth-context.tsx  i18n.ts
components/: i18n-provider.tsx  kanban-app.tsx
components/auth/: auth-guard.tsx  google-login-button.tsx
components/ui/: avatar.tsx
data/: engineering-kanban-board.json
lib/: i18n.ts
lib/kanban/: constants.ts  store.ts  types.ts  validation.ts
openspec/: config.yaml
openspec/changes/card-date-format/: design.md  proposal.md  tasks.md
openspec/changes/card-gantt-view/: design.md  proposal.md  tasks.md
openspec/changes/creative-website-redesign/: proposal.md  tasks.md
openspec/changes/enhanced-card-design/: design.md  proposal.md  tasks.md
openspec/changes/fake-google-oauth/: design.md  tasks.md
openspec/changes/fix-cors-production/: design.md  proposal.md  tasks.md
openspec/changes/list-view/: design.md  tasks.md
openspec/changes/postgres-persistence/: design.md  proposal.md  tasks.md
(+114 files in other folders)
